# moscowliuda-django

./: .gitignore  Makefile  README.md  add_items_to_db.py  manage.py  pyproject.toml
authorization/: admin.py  apps.py  forms.py  models.py  urls.py
authorization/migrations/: 0001_initial.py
goods/: admin.py  models.py
goods/migrations/: 0001_initial.py
moscowliuda/: asgi.py  settings.py  urls.py  wsgi.py
moscowliuda_main/: apps.py  views.py
moscowliuda_views/: apps.py  views.py
posobie/: admin.py  apps.py  models.py
posobie/migrations/: 0001_initial.py
project/: models.py
project/migrations/: 0001_initial.py
templates/: base.html  good_list.html  home.html  project_list.html  textbook_list.html
templates/registration/: logged_out.html  login.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_phone.py
views/: apps.py  views.py
